--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -1,9 +1,9 @@
-name: Build and Push Docker Image
+name: Build and Push Docker Images
 
 on:
   push:
     branches:
-      - main  # or your deployment branch
+      - main
 
 jobs:
   build-and-push:
@@ -16,34 +16,34 @@ jobs:
       - name: Log in to Docker registry
         run: echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login ${{ secrets.REGISTRY_URL || 'docker.io' }} -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
 
+      # FRONTEND IMAGE
       - name: Set Front Docker image tag
-        id: meta
+        id: meta_front
         run: |
           IMAGE_NAME=${{ secrets.REGISTRY_USERNAME }}/dataiku-front
           TAG=${GITHUB_SHA::7}
           echo "image=${IMAGE_NAME}:${TAG}" >> $GITHUB_OUTPUT
 
-      - name: Build Docker image
+      - name: Build Front Docker image
         run: |
-          cd frontend && \
-          docker build -t ${{ steps.meta.outputs.image }} .
+          cd frontend
+          docker build -t ${{ steps.meta_front.outputs.image }} .
 
-      - name: Push Docker image
-        run: |
-          docker push ${{ steps.meta.outputs.image }}
+      - name: Push Front Docker image
+        run: docker push ${{ steps.meta_front.outputs.image }}
 
+      # BACKEND/API IMAGE
       - name: Set API Docker image tag
-        id: meta
+        id: meta_api
         run: |
           IMAGE_NAME=${{ secrets.REGISTRY_USERNAME }}/dataiku-api
           TAG=${GITHUB_SHA::7}
           echo "image=${IMAGE_NAME}:${TAG}" >> $GITHUB_OUTPUT
 
-      - name: Build Docker image
+      - name: Build API Docker image
         run: |
-          cd api && \
-          docker build -t ${{ steps.meta.outputs.image }} .
+          cd api
+          docker build -t ${{ steps.meta_api.outputs.image }} .
 
-      - name: Push Docker image
-        run: |
-          docker push ${{ steps.meta.outputs.image }}
+      - name: Push API Docker image
+        run: docker push ${{ steps.meta_api.outputs.image }}
