--- a/charts/dataiku/templates/service-front.yaml
+++ b/charts/dataiku/templates/service-front.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "dataiku.name" . }}-front
+  name: {{ include "dataiku.name" . }}-frontend
   labels:
-    app: {{ include "dataiku.name" . }}-front
+    app: {{ include "dataiku.name" . }}-frontend
 spec:
   type: ClusterIP
   ports:
     - port: {{ .Values.frontend.service.port }}
-      targetPort: {{ .Values.api.containerPort }}
+      targetPort: {{ .Values.frontend.containerPort }}
       protocol: TCP
       name: http
   selector:
-    app: {{ include "dataiku.name" . }}-front
+    app: {{ include "dataiku.name" . }}-frontend
