--- a/app/api/requirements.txt
+++ b/app/api/requirements.txt
@@ -1,4 +1,4 @@
-Flask==2.0.3
+flask==2.0.3
 Werkzeug==2.0.3
 python-dotenv==0.17.1
 
@@ -6,10 +6,10 @@ python-dotenv==0.17.1
 opentelemetry-api==1.25.0
 opentelemetry-sdk==1.25.0
 
-# Prometheus exporter
-opentelemetry-exporter-prometheus==1.25.0
+# Prometheus exporter (beta version)
+opentelemetry-exporter-prometheus==0.46b0
 prometheus-client==0.20.0
 
-# Flask instrumentation
+# Flask instrumentation (beta version)
 opentelemetry-instrumentation==0.46b0
 opentelemetry-instrumentation-flask==0.46b0
