--- a/charts/dataiku/templates/service-api.yaml
+++ b/charts/dataiku/templates/service-api.yaml
@@ -11,5 +11,8 @@ spec:
       targetPort: {{ .Values.api.containerPort }}
       protocol: TCP
       name: api
+    - port: {{ .Values.api.service.monitoringPort }}
+      protocol: TCP
+      name: metrics
   selector:
     app: {{ include "dataiku.name" . }}-api
