--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -15,6 +15,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Install yq
+        run: |
+          sudo wget -qO /usr/bin/yq https://github.com/mikefarah/yq/releases/download/v4.40.5/yq_linux_amd64
+          sudo chmod +x /usr/bin/yq
+
       - name: Log in to Docker registry
         run: echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login ${{ secrets.REGISTRY_URL || 'docker.io' }} -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
 
@@ -24,28 +29,46 @@ jobs:
         run: |
           IMAGE_NAME=${{ secrets.REGISTRY_USERNAME }}/dataiku-front
           TAG=${GITHUB_SHA::7}
+          echo "IMAGE=${IMAGE_NAME}:${TAG}" >> $GITHUB_ENV
+          echo "FRONT_TAG=${TAG}" >> $GITHUB_ENV
           echo "image=${IMAGE_NAME}:${TAG}" >> $GITHUB_OUTPUT
 
       - name: Build Front Docker image
         run: |
           cd app/frontend
-          docker build -t ${{ steps.meta_front.outputs.image }} .
+          docker build -t ${{ env.IMAGE }} .
 
       - name: Push Front Docker image
-        run: docker push ${{ steps.meta_front.outputs.image }}
+        run: docker push ${{ env.IMAGE }}
 
-      # BACKEND/API IMAGE
+      # BACKEND IMAGE
       - name: Set API Docker image tag
         id: meta_api
         run: |
           IMAGE_NAME=${{ secrets.REGISTRY_USERNAME }}/dataiku-api
           TAG=${GITHUB_SHA::7}
+          echo "API_IMAGE=${IMAGE_NAME}:${TAG}" >> $GITHUB_ENV
+          echo "API_TAG=${TAG}" >> $GITHUB_ENV
           echo "image=${IMAGE_NAME}:${TAG}" >> $GITHUB_OUTPUT
 
       - name: Build API Docker image
         run: |
           cd app/api
-          docker build -t ${{ steps.meta_api.outputs.image }} .
+          docker build -t ${{ env.API_IMAGE }} .
 
       - name: Push API Docker image
-        run: docker push ${{ steps.meta_api.outputs.image }}
+        run: docker push ${{ env.API_IMAGE }}
+
+      # Update Helm values.yaml
+      - name: Update Helm values with new image tags
+        run: |
+          yq -i '.frontend.image.tag = "${{ env.FRONT_TAG }}"' charts/dataiku/values.yaml
+          yq -i '.backend.image.tag = "${{ env.API_TAG }}"' charts/dataiku/values.yaml
+
+      - name: Commit updated Helm values
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add helm/values.yaml
+          git commit -m "Update image tags in Helm values.yaml [skip ci]" || echo "No changes to commit"
+          git push origin main
