--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -8,7 +8,7 @@ on:
       - app/**
 
 jobs:
-  build-and-push:
+  build-push-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -69,6 +69,6 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add helm/values.yaml
+          git add charts/dataiku/values.yaml
           git commit -m "Update image tags in Helm values.yaml [skip ci]" || echo "No changes to commit"
           git push origin main
