--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -65,10 +65,13 @@ jobs:
           yq -i '.frontend.image.tag = "${{ env.FRONT_TAG }}"' charts/dataiku/values.yaml
           yq -i '.backend.image.tag = "${{ env.API_TAG }}"' charts/dataiku/values.yaml
 
-      - name: Commit updated Helm values
+      - name: Push changes with PAT
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
           git add charts/dataiku/values.yaml
           git commit -m "Update image tags in Helm values.yaml [skip ci]" || echo "No changes to commit"
           git push origin main
