--- a/app/api/requirements.txt
+++ b/app/api/requirements.txt
@@ -1,7 +1,6 @@
-flask==2.3.3
-opentelemetry-api==1.24.0
-opentelemetry-sdk==1.24.0
-opentelemetry-instrumentation==0.45b0
-opentelemetry-instrumentation-flask==0.45b0
-opentelemetry-exporter-prometheus==0.45b0
-prometheus-client==0.20.0
+Flask
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-exporter-prometheus
+opentelemetry-instrumentation-flask
+prometheus-client
